[C#] Add Roslyn analyzer and codefixes to enforce policies
- Custom view must have a Body property
- Body property must either return exact type or the containing class must be partial

NOTE: This is currently using a pre-release set of Roslyn deps, since
 we plan to add a source generator. Thus, this requires .NET 5 preview 3
 and a nightly build of mono- I'm currently having success with mono 6.13.0.495 (master/fdc474bc46f)

--- a/XamiOSSwiftUITest/XamiOSSwiftUITest.csproj
+++ b/XamiOSSwiftUITest/XamiOSSwiftUITest.csproj
@@ -131,6 +131,13 @@
         <Project>{31E05277-F5C7-47C7-988B-EFA3A8057F07}</Project>
         <Name>SwiftUI</Name>
       </ProjectReference>
+      <ProjectReference Include="..\src\SwiftUI.Analyzers\SwiftUI.Analyzers.csproj">
+        <Project>{5009CB3A-FF2B-46C8-B75B-2BD05F67BA60}</Project>
+        <Name>SwiftUI.Analyzers</Name>
+        <PrivateAssets>all</PrivateAssets>
+        <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+        <OutputItemType>Analyzer</OutputItemType>
+      </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
