--- a/src/SwiftUI.Analyzers/SwiftUI.Analyzers.csproj
+++ b/src/SwiftUI.Analyzers/SwiftUI.Analyzers.csproj
@@ -12,8 +12,9 @@
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'Default' ">
     <StartAction>Program</StartAction>
-    <StartProgram>/usr/local/share/dotnet/sdk/5.0.100-preview.3.20216.6/Roslyn/bincore/csc.dll</StartProgram>
-    <StartArguments>-a:SwiftUI.Analyzers.dll -r:$(SolutionDir)/managed/Debug/netstandard2.1/SwiftUI.dll $(SolutionDir)/tests/SwiftUI.Analyzers.Tests/Subjects/TestView.cs</StartArguments>
+    <StartProgram>$(HOME)/.nuget/packages/microsoft.net.compilers.toolset/3.7.0-1.20220.1/tasks/netcoreapp3.1/bincore/csc.dll</StartProgram>
+    <RefAsmPath>/usr/local/share/dotnet/packs/Microsoft.NETCore.App.Ref/5.0.0-preview.3.20214.6/ref/netcoreapp5.0</RefAsmPath>
+    <StartArguments>-langversion:preview -a:SwiftUI.Analyzers.dll -r:$(RefAsmPath)/System.Runtime.dll -r:$(RefAsmPath)/mscorlib.dll -r:$(RefAsmPath)/netstandard.dll -r:$(SolutionDir)/managed/Debug/netstandard2.1/SwiftUI.dll $(SolutionDir)/NetCoreTest/Program.cs</StartArguments>
     <ExternalConsole>false</ExternalConsole>
   </PropertyGroup>
 
