[build] Specify the path of the package to push

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -101,4 +101,5 @@ jobs:
     inputs:
       command: push
       publishVstsFeed: 'alcorra/Xamarin.SwiftUI'
+      packagesToPush: '$(System.DefaultWorkingDirectory)/artifacts/*.nupkg'
       allowPackageConflicts: true
