--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -100,6 +100,6 @@ jobs:
     #condition: and( succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master') )
     inputs:
       command: push
-      publishVstsFeed: 'alcorra/Xamarin.SwiftUI'
+      publishVstsFeed: 'Xamarin.SwiftUI/master'
       packagesToPush: '$(System.DefaultWorkingDirectory)/artifacts/*.nupkg'
       allowPackageConflicts: true
