--- a/tests/SwiftUI.Analyzers.Tests/SwiftUI.Analyzers.Tests.csproj
+++ b/tests/SwiftUI.Analyzers.Tests/SwiftUI.Analyzers.Tests.csproj
@@ -1,4 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="../../msbuild/Xamarin.SwiftUI.props" />
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
