--- a/tests/SwiftUI.Tests.FSharp/SwiftUI.Tests.FSharp.fsproj
+++ b/tests/SwiftUI.Tests.FSharp/SwiftUI.Tests.FSharp.fsproj
@@ -14,6 +14,7 @@
     <Compile Include="Subjects\ViewWithOptionState.fs" />
     <Compile Include="TypeTests.fs" />
     <Compile Include="Program.fs" />
+    <Compile Include="ColorTests.fs" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
