[build] Fixes for CI; get Analyzer tests running
- Run all the tests through the sln so test assemblies added in the future will "just work"
- Remove global.json - I don't think it's actually needed?

--- a/XamMacSwiftUITest.FSharp/XamMacSwiftUITest.FSharp.fsproj
+++ b/XamMacSwiftUITest.FSharp/XamMacSwiftUITest.FSharp.fsproj
@@ -78,5 +78,8 @@
       <Name>SwiftUI</Name>
     </ProjectReference>
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.FSharp.targets" />
+  <Target Name="VSTest" />
+  <Import
+    Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.FSharp.targets"
+    Condition="Exists('$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.FSharp.targets')" />
 </Project>
