--- a/XamiOSSwiftUITest/XamiOSSwiftUITest.csproj
+++ b/XamiOSSwiftUITest/XamiOSSwiftUITest.csproj
@@ -139,5 +139,8 @@
         <OutputItemType>Analyzer</OutputItemType>
       </ProjectReference>
     </ItemGroup>
-    <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
+    <Target Name="VSTest" />
+    <Import
+        Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets"
+        Condition="Exists('$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets')" />
 </Project>
