Looks like it was the SharedProject's namespace name which was causing the crash. Still very odd, but it builds and runs in both iOS and Mac now.

--- a/XamMacSwiftUITest/XamMacSwiftUITest.csproj
+++ b/XamMacSwiftUITest/XamMacSwiftUITest.csproj
@@ -79,7 +79,6 @@
     </ProjectReference>
   </ItemGroup>
   <Target Name="VSTest" />
-  <Import
-    Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets"
-    Condition="Exists('$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets')" />
+  <Import Project="..\XamSwiftUITestShared\XamSwiftUITestShared.projitems" Label="Shared" Condition="Exists('..\XamSwiftUITestShared\XamSwiftUITestShared.projitems')" />
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets" Condition="Exists('$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets')" />
 </Project>
