--- a/XamiOSSwiftUITest/XamiOSSwiftUITest.csproj
+++ b/XamiOSSwiftUITest/XamiOSSwiftUITest.csproj
@@ -141,7 +141,7 @@
     </ItemGroup>
     <Target Name="VSTest" />
     <Import
-      Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.iOS.CSharp.targets"
-      Condition="Exists('$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.iOS.CSharp.targets')" />
+        Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets"
+        Condition="Exists('$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets')" />
     <Import Project="..\XamSwiftUITestShared\XamSwiftUITestShared.projitems" Label="Shared" Condition="Exists('..\XamSwiftUITestShared\XamSwiftUITestShared.projitems')" />
 </Project>
