Looks like it was the SharedProject's namespace name length which was… (#28)
* Looks like it was the SharedProject's namespace name which was causing the crash. Still very odd, but it builds and runs in both iOS and Mac now.

* Fix csproj formattting.

* Seems the iOS project had an extra tab :/

* Bump to latest FSharp

* Make namespace odd length, as temporary workout.

--- a/XamiOSSwiftUITest/XamiOSSwiftUITest.csproj
+++ b/XamiOSSwiftUITest/XamiOSSwiftUITest.csproj
@@ -143,4 +143,5 @@
     <Import
         Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets"
         Condition="Exists('$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets')" />
+    <Import Project="..\XamSwiftUITestShared\XamSwiftUITestShared.projitems" Label="Shared" Condition="Exists('..\XamSwiftUITestShared\XamSwiftUITestShared.projitems')" />
 </Project>
