Replace init property with ObsoleteAttribute
- Enables removing hacks to build with C# 9 for .NET Standard 2.1 (not officially supported)
- Fixes invalid IL emitted by current F# compiler
- Might be more future-proof when F# gains support for init-only properties

All the above benefits at the cost of a little API purity

--- a/msbuild/Xamarin.SwiftUI.props
+++ b/msbuild/Xamarin.SwiftUI.props
@@ -1,6 +1,6 @@
 <Project>
 	<PropertyGroup>
-		<!-- Enable source generators, init-only properties -->
+		<!-- Enable source generators -->
 		<LangVersion>9.0</LangVersion>
 
 		<!-- Nullability is strongly recommended -->
