Get the F# sample working
We can do without F# 5 for the moment

--- a/src/SwiftUI.Analyzers/SwiftUI.Analyzers.csproj
+++ b/src/SwiftUI.Analyzers/SwiftUI.Analyzers.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <Import Project="../../msbuild/Xamarin.SwiftUI.props" />
+  <PropertyGroup>
+    <!-- We don't actually need to build this with C# 9, even though it provides source generators.. -->
+    <LangVersion>default</LangVersion>
+  </PropertyGroup>
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
