--- a/src/SwiftUI/SwiftUI.csproj
+++ b/src/SwiftUI/SwiftUI.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="MSBuild.Sdk.Extras/2.1.2">
-  <Import Project="../../msbuild/Xamarin.SwiftUI.props" />
+<Import Project="../../msbuild/Xamarin.SwiftUI.props" />
+  <PropertyGroup>
+    <!-- We don't actually need to build this with C# 9 yet -->
+    <LangVersion>default</LangVersion>
+  </PropertyGroup>
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.1</TargetFrameworks>
