--- a/src/SwiftUI/SwiftUI.csproj
+++ b/src/SwiftUI/SwiftUI.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="MSBuild.Sdk.Extras/2.1.2">
-<Import Project="../../msbuild/Xamarin.SwiftUI.props" />
+<Project>
+  <Import Project="Sdk.props" Sdk="MSBuild.Sdk.Extras" />
+  <Import Project="../../msbuild/Xamarin.SwiftUI.props" />
   <PropertyGroup>
-    <!-- We don't actually need to build this with C# 9 yet -->
-    <LangVersion>default</LangVersion>
+    <_RealLangVersion>$(LangVersion)</_RealLangVersion>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -32,10 +32,21 @@
     <None Include="iOS\**\*.*" />
   </ItemGroup>
 
+  <ItemGroup Condition=" '$(TargetFrameworkIdentifier)' != 'netstandard' Or '$(MSBuildRuntimeType)' != 'Core' ">
+    <!-- KLUDGE: Hack in a C# 9 compiler for Xamarin -->
+    <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="$(RoslynNugetVersion)" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(TargetFrameworkIdentifier)' != 'netstandard' ">
     <!-- Embed the native library where possible -->
     <IsBindingProject>true</IsBindingProject>
   </PropertyGroup>
+
+  <!-- Hack around https://github.com/xamarin/xamarin-macios/commit/9f28bce6b87ca6ea4cc51a0dff3e2db0064bf6ca -->
+  <Target Name="ForceResetLangVersion">
+    <PropertyGroup>
+      <LangVersion>$(_RealLangVersion)</LangVersion>
+    </PropertyGroup>
+  </Target>
 
   <ItemGroup>
     <!-- KLUDGE: We auto-generate a blank file for this -->
@@ -54,4 +65,12 @@
       File="@(ObjcBindingApiDefinition)"
       Condition="!Exists('@(ObjcBindingApiDefinition)')" />
   </Target>
+
+  <Import Project="Sdk.targets" Sdk="MSBuild.Sdk.Extras" />
+  <PropertyGroup>
+    <CompileDependsOn>
+      ForceResetLangVersion;
+      $(CompileDependsOn)
+    </CompileDependsOn>
+  </PropertyGroup>
 </Project>
