--- a/src/SwiftUI/SwiftUI.csproj
+++ b/src/SwiftUI/SwiftUI.csproj
@@ -51,19 +51,11 @@
   <ItemGroup>
     <!-- KLUDGE: We auto-generate a blank file for this -->
     <ObjcBindingApiDefinition Include="$(IntermediateOutputPath)\ApiDefinition.cs" />
-    <ObjcBindingNativeFramework
-      Include="..\..\native\$(Configuration)\$(TargetFramework)\SwiftUIGlue.framework"
-      Condition="Exists('..\..\native\$(Configuration)\$(TargetFramework)\SwiftUIGlue.framework')"
-      Visible="false" />
-    <ObjcBindingNativeLibrary
-      Include="..\..\native\$(Configuration)\$(TargetFramework)\*.dylib"
-      Visible="false" />
+    <ObjcBindingNativeFramework Include="..\..\native\$(Configuration)\$(TargetFramework)\SwiftUIGlue.framework" Condition="Exists('..\..\native\$(Configuration)\$(TargetFramework)\SwiftUIGlue.framework')" Visible="false" />
+    <ObjcBindingNativeLibrary Include="..\..\native\$(Configuration)\$(TargetFramework)\*.dylib" Visible="false" />
   </ItemGroup>
   <Target Name="CreateDummyApiDefinition" BeforeTargets="_GenerateBindings">
-    <WriteLinesToFile
-      Lines=""
-      File="@(ObjcBindingApiDefinition)"
-      Condition="!Exists('@(ObjcBindingApiDefinition)')" />
+    <WriteLinesToFile Lines="" File="@(ObjcBindingApiDefinition)" Condition="!Exists('@(ObjcBindingApiDefinition)')" />
   </Target>
 
   <Import Project="Sdk.targets" Sdk="MSBuild.Sdk.Extras" />
