--- a/tests/SwiftUI.Tests/SwiftUI.Tests.csproj
+++ b/tests/SwiftUI.Tests/SwiftUI.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net5.0</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<IsPackable>false</IsPackable>
 
@@ -26,7 +26,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<Folder Include="Subjects\" />
-		<None Include="..\..\native\$(Configuration)\xamarin.mac20\libSwiftUIGlue.dylib" Visible="false">
+		<None Include="..\..\native\$(Configuration)\$(TargetFramework)-macos\libSwiftUIGlue.dylib" Visible="false">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
